--- a/Examples/d3ia_v1.5.html
+++ b/Examples/d3ia_v1.5.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <script src="./d3/d3.min.js"> </script>
+    <script src="../d3/d3.min.js"> </script>
     <style>
         .inactive .tentative {
             stroke: darkgray;
