--- a/Examples/tests.html
+++ b/Examples/tests.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <script src="./d3/d3.min.js"> </script>    
+    <script src="../d3/d3.min.js"> </script>    
 </head>
 <body>
     <div id="someDiv" style="width: 200px; height: 100px; border: black 1px solid;">
