finished Chapter 1 of the book.

--- a/Examples/d3ia_fig_1.26.html
+++ b/Examples/d3ia_fig_1.26.html
@@ -9,7 +9,8 @@
     }
 </style>
 <body>
-    <div id="borderdiv">
-    </div>
+    <!-- <div id="borderdiv"> </div> -->
 </body>
+
+<!-- <script src="d3_script.js"> </script> -->
 </html>
